--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+#lines::before{background:url(./assets/recources/lines.png)no-repeat center/cover;animation: slide4 1s 1 forwards ease-out;}
+.box::after{background:url(./assets/recources/box.png)no-repeat center/cover;width:8rem;height:8rem;animation: drop .6s 1 1s forwards linear;}@keyframes drop{0%{transform: translateY(-100%);}80%,100%{transform: translateY(220%);opacity: 100%;}90%{transform: translateY(200%);}}
 #Animated_Circle1{animation: wiggle_1 10s infinite;}@keyframes wiggle_1 {0%,100%{transform: translate(0%,0%);}50%{transform: translate(100%,150%);}}
 #Animated_Circle2{animation: wiggle_2 10s infinite reverse;}@keyframes wiggle_2 {0%,100%{transform: translate(-50%,-50%);}50%{transform: translate(100%,50%);}}
 #Animated_Circle3{animation: wiggle_3 10s infinite;}@keyframes wiggle_3 {0%,100%{transform: translate(150%,-250%);}50%{transform: translate(200%,-350%);}}
@@ -20,4 +22,3 @@
 .slide4{animation: slide4 1s 1 forwards ease-out;}@keyframes slide4 {from{width: 0rem;}to{width: 50rem;}}
 .animate-spin{animation-duration: 10s;}
 .animate-spin-reverse{animation: rotate 10s infinite reverse linear;}@keyframes rotate {from{}to{transform: rotate(360deg);} }
-.dropAnimation{animation: drop .6s 1 forwards linear;}@keyframes drop{0%{transform: translateY(-100%);}80%,100%{transform: translateY(220%);}90%{transform: translateY(200%);}}
